--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,9 @@
-@import url('globalElement/_navbar.scss');
-@import url('globalElement/_footer.scss');
-@import url('globalElement/_button.scss');
-@import url('mixin/_mixin.scss');
-@import url('variable/_variable.scss');
-@import url('page/_home.scss');
-@import url('page/_product.scss');
-@import url('page/_upload.scss');
+@import 'globalElement/_navbar.scss';
+@import 'globalElement/_footer.scss';
+@import 'globalElement/_button.scss';
+@import 'mixin/_mixin.scss';
+@import 'variable/_variable.scss';
+@import 'page/_home.scss';
+@import 'page/_product.scss';
+@import 'page/_upload.scss';
 
