--- a/scss/page/_home.scss
+++ b/scss/page/_home.scss
@@ -1,12 +1,129 @@
-body{
+@import "../mixin/mixin";
+
+body {
     margin: 0;
     padding: 0;
     font-family: system-ui;
 }
-.container{
+
+.container {
     width: 100%;
-    // .header{
+    .header {
+        color: white;
+        background: url(../../img/Mi-Notebook-Pro-X-15-1024x638-1024x638.jpg) no-repeat center;
+        background-size: cover;
+        height: 400px;
 
+        .text-header {
+            position: relative;
+            top: 37%;
+            left: -32%;
+            text-align: center;
+            h1{
+                // color: black;
+                span{
+                    color:#FFCF43 ;
+                }
+            }
+            .search {
+                display: flex;
+                align-items: center;
+                position: relative;
+                left: 35%;
+                color: grey;
+                background-color: white;
+                width: 30%;
+                border-radius: 5px;
+                overflow: hidden;
 
-    // };
+                input {
+                    @include input;
+                    border: none;
+                    outline: none;
+
+                }
+            }
+
+        }
+
+    }
+    .popular-brand{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 20px 0px 100px 0px;
+        h1{
+            color:#01345B ;
+        }
+        .list-brand{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            .show-img{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                height: 100%;
+                // background-color: antiquewhite;
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+                h1{
+                    position: absolute;
+                    color: white;
+                }
+            }
+        }
+    }
+    .list-item{
+        display: flex;
+        flex-direction: column;
+        .detail{
+            display: flex;
+            margin: 0px 0px;
+            
+            img{
+                width: 800px;
+                // height: 100%;
+                position: relative;
+            }
+            .info{
+                display: flex;
+                flex-direction: column;
+                background-color: #01345B;
+                h1{
+                    margin-left: 45%;
+                    color:#FFCF43 ;
+
+                }
+                p{
+                    margin-left: 10%;
+                    color: white;
+                }
+                button{
+                    margin-left: auto;
+                    margin-right: 30px;
+                    margin: 20% 7% 30% auto;
+                }
+            }
+        }
+    }
+    // .info-item{
+    //     display: flex;
+    //     align-items: center;
+    //     justify-content: center;
+    //     width: 100%;
+    //     height: 100%;
+    //     // background-color: antiquewhite;
+    //     img{
+    //         width: 100%;
+    //         height: 60%;
+    //     }
+    //     .info{
+    //         position: absolute;
+    //         color: white;
+    //     }
+    // }
 }
