Apply style on Upload page and form dialog.

--- a/scss/globalElement/_footer.scss
+++ b/scss/globalElement/_footer.scss
@@ -5,6 +5,7 @@
     justify-content: space-around;
     background-color: #01345B;
     padding: 10px 5px;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
     .footer-left{
         .text{
             margin-left: 30px;
