--- a/scss/globalElement/_navbar.scss
+++ b/scss/globalElement/_navbar.scss
@@ -6,7 +6,7 @@ nav{
     // margin: 5px 10px;
     padding-top: 5px;
     background-color: #01345B;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
     position: fixed;
     top: 0;
     z-index: 1000;
