--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'globalElement/_navbar.scss';
 @import 'globalElement/_button.scss';
 @import 'globalElement/_footer.scss';
+@import 'globalElement/card';
 @import 'mixin/_mixin.scss';
 @import 'variable/_variable.scss';
 @import 'page/_home.scss';
