--- a/scss/page/_upload.scss
+++ b/scss/page/_upload.scss
@@ -33,7 +33,12 @@
             td {
                 border: 1px solid black;
                 border-collapse: collapse;
-                text-align: center;
+                text-align: center;             
+                padding: 0px 35px;
+            }
+            img{
+                width: 25px;
+                margin: 0px 5px;
             }
         }
 
@@ -66,40 +71,64 @@
             font-size: 25px;
         }
 
-        input {
-            @include input;
-            width: 80%;
-        }
-
-        .data {
+        form{
             display: flex;
-
-            section {
-
-                display: flex;
-                flex-direction: column;
-
-                select {
-                    @include input;
-                    width: 90%;
-                    padding: 8px;
-                }
-
-                textarea {
-                    width: 545px;
-                    height: 195px;
-                    resize: none;
-                    border-radius: 5px;
-                }
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            input {
+                @include input;
+                width: 80%;
             }
-
+    
+            .data {
+                display: flex;
+    
+                section {
+    
+                    display: flex;
+                    flex-direction: column;
+    
+                    select {
+                        @include input;
+                        width: 90%;
+                        padding: 8px;
+                    }
+    
+                    textarea {
+                        width: 545px;
+                        height: 195px;
+                        resize: none;
+                        border-radius: 5px;
+                    }
+    
+                }
+    
+    
+            }
+            .img{
+                text-align:center;
+                padding:3%;
+                border:thin solid black;
+                margin-top: 10px;
+                width: 93%;
+                border-radius: 5px;
+                #image{
+                    cursor: pointer;
+                    
+               }
+               input[type="file"]{
+                   display: none;
+                   
+               }
+            }
+    
         }
-
         menu {
             width: 100%;
             display: flex;
             justify-content: flex-end;
-            margin-left: -50px;
+            margin-left: -45px;
 
             button {
                 margin-left: 30px;
