--- a/scss/globalElement/_card.scss
+++ b/scss/globalElement/_card.scss
@@ -1,24 +1,39 @@
 .list-1{
+    // display: grid;
+    // grid-template-columns: repeat(2,1fr);
     display: flex;
+    margin-top: -10px;
+    flex-wrap: wrap;
     justify-content: space-evenly;
+    // flex-direction: column;
+    // width: 100%;
+
+    a{
+        text-decoration: none;
+    }
     .card{
         background-color: hsl(206, 98%, 18%);
-        // height: 300px;
         box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
         padding: 15px;
         border-radius: 10px;
         color: white;
+        margin: 10px;
+
         img{
             border-radius: 10px;
         }
         .text-card{
+            width: 100%;
             .sub-text{
+                // height: 75%;
+                width: 100%;
                 display: flex;
                 justify-content: space-between;
+                // align-items: flex-end;
             }
         }
         &:hover{
-            transform: translate(-10px , -10px);
+            transform: translate(-5px , -5px);
 
         }
     }
