--- a/scss/page/_product.scss
+++ b/scss/page/_product.scss
@@ -7,9 +7,10 @@
     .header {
         margin-top: 50px;
         .slideshow-container {
-            max-width: 60%;
+            max-width: 100%;
             position: relative;
             margin: auto;
+            left: 18%;
     
             .mySlides {
                 display: none;
