[SEARCH_ITEM]: add new feature to search prodeuct that display.

--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,7 @@ body {
 .pro-container .content-list .right-side main {
   display: flex;
   width: 100%;
+  justify-content: space-between;
 }
 .pro-container .content-list .right-side .bottom {
   display: flex;
