--- a/scss/page/_product.scss
+++ b/scss/page/_product.scss
@@ -93,6 +93,7 @@
             main{
                 display: flex;
                 width: 100%;
+                justify-content: space-between;
             }
             .bottom{
                 display: flex;
