[PRODUCT_PAGE]: change feature set index.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,5 +6,6 @@
 @import 'variable/_variable.scss';
 @import 'page/_home.scss';
 @import 'page/_product.scss';
+@import 'page/detail';
 @import 'page/_upload.scss';
 
