--- a/scss/page/_detail.scss
+++ b/scss/page/_detail.scss
@@ -1,1 +1,161 @@
 @import "../mixin/mixin";
+.container-detail{
+    width: 100%;
+    .title{
+        display: flex;
+        width: 100%;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 50vh;
+        align-items: center;
+        justify-content: center;
+        h1{
+            color: white;
+
+            
+        }
+
+    }
+    .info-detail{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        margin: 30px 0px;
+        .info{
+            display: flex;
+            flex-direction: column;
+            .sub-info{
+                display: flex;
+                #image{
+                    background-color: bisque;
+                    padding: 10px;
+                    border-radius: 10px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    height: 80%;
+                    margin: 10px 30px 10px 0px;
+                    img{
+                        width: 100%;
+                    }
+                }
+
+            }
+        }
+        p{
+            font-weight: bold;
+            span{
+                font-weight:normal;
+                margin-left: 10px;
+            }
+        }
+        menu{
+            display: flex;
+            justify-content: flex-end;
+            button{
+                margin-left: 30px;
+                padding: 7px 20px;
+            }
+        }
+        .other{
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            main{
+                width: 100%;
+                display: flex;
+                justify-content: center;
+            }
+        }
+    }
+    .box-dialog-chart{
+        position: fixed;
+        top: 65px;
+        left: 5px;
+        width: 30%;
+
+        dialog{
+            width: 100%;
+            border-radius: 10px;
+            header{
+                font-weight: bold;
+                font-size: larger;
+                margin-bottom: 10px;
+            }
+            .list-chart{
+                width: 100%;
+                .item{
+                    display: flex;
+                    width: 100%;
+                    justify-content: space-around;
+                    align-items: center;
+                    border: 2px solid gray;
+                    border-radius: 10px;
+                    padding: 10px;
+                    margin-bottom: 5px;
+                    img{
+                        border-radius: 10px;
+                        width: 100px;
+                    }
+                    menu{
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        width: 44%;
+                        button{
+                            padding: 5px 10px;
+                        }
+                    }
+                }
+            }
+
+        }
+
+    }
+    .box-dialog-buy{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.614);
+        dialog{ 
+            position: fixed;
+            top: 20%;
+            padding: 30px;
+            width: 35%;
+            border-radius: 10px;
+            .container{
+                width: 100%;
+                form{
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    input{
+                        @include input;
+                        margin: 5px 0px;
+                    }
+                    .billing{
+                        display: flex;
+                        flex-direction: column;
+                        margin-top: -42px;
+                    }
+                    .payment{
+                        display: flex;
+                        flex-direction: column;
+                    }
+                }
+            }
+            .btn{
+                display: flex;
+                justify-content: flex-end;
+                button{
+                    padding: 5px 10px;
+                    margin-left: 10px;
+                    margin-top: 10px;
+                }
+            }
+        }
+    }
+}
