[UPLOAD_PAGE]: add nex feature add id.

--- a/scss/page/_detail.scss
+++ b/scss/page/_detail.scss
@@ -85,7 +85,7 @@
                 font-size: larger;
                 margin-bottom: 10px;
             }
-            .list-chart{
+            .list-cart{
                 width: 100%;
                 .item{
                     display: flex;
