--- a/scss/page/_product.scss
+++ b/scss/page/_product.scss
@@ -88,7 +88,7 @@
 
         }
         .right-side{
-            display: grid;
+            // display: grid;
             width: 100%;
             main{
                 display: flex;
