--- a/scss/globalElement/_button.scss
+++ b/scss/globalElement/_button.scss
@@ -5,7 +5,9 @@ button{
     padding: 10px 15px;
     border-radius: 10px;
     cursor: pointer;
-
+    a{
+        text-decoration: none;
+    }
 }
 button:hover{
         background-color: #01345B;
