--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ button {
 }
 button a {
   text-decoration: none;
+  color: white;
 }
 
 button:hover {
@@ -96,6 +97,7 @@ button:hover {
   margin-top: -10px;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  height: 100%;
 }
 .list-1 a {
   text-decoration: none;
@@ -103,11 +105,11 @@ button:hover {
 }
 .list-1 .card {
   background-color: hsl(206deg, 98%, 18%);
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
   padding: 15px;
   border-radius: 10px;
   color: white;
-  margin: 20px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
+  margin-bottom: 30px;
 }
 .list-1 .card img {
   border-radius: 10px;
@@ -323,9 +325,9 @@ body {
 }
 .pro-container .content-list .right-side main {
   display: flex;
-  width: 100%;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
+  width: 100%;
 }
 .pro-container .content-list .right-side .bottom {
   display: flex;
@@ -382,7 +384,7 @@ body {
   display: flex;
 }
 .container-detail .info-detail .info .sub-info #image {
-  background-color: bisque;
+  background-color: rgba(128, 128, 128, 0.438);
   padding: 10px;
   border-radius: 10px;
   display: flex;
@@ -390,6 +392,7 @@ body {
   align-items: center;
   height: 80%;
   margin: 10px 30px 10px 0px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .container-detail .info-detail .info .sub-info #image img {
   width: 100%;
