--- a/scss/page/_detail.scss
+++ b/scss/page/_detail.scss
@@ -29,7 +29,7 @@
             .sub-info{
                 display: flex;
                 #image{
-                    background-color: bisque;
+                    background-color: rgba(128, 128, 128, 0.438);
                     padding: 10px;
                     border-radius: 10px;
                     display: flex;
@@ -37,6 +37,7 @@
                     align-items: center;
                     height: 80%;
                     margin: 10px 30px 10px 0px;
+                    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
                     img{
                         width: 100%;
                     }
