--- a/scss/page/_product.scss
+++ b/scss/page/_product.scss
@@ -4,7 +4,7 @@
 
 .pro-container{
     width: 100%;
-    height: 100%;;
+    height: 100%;
     .header {
         margin-top: 50px;
         display: flex;
@@ -17,14 +17,9 @@
             justify-content: center;
             max-width: 100%;
             position: relative;
-            
-            // margin: auto;
-            // left: 18%;
-    
             .mySlides {
                 display: none;
             }
-    
             .text {
                 color: #f2f2f2;
                 font-size: 15px;
@@ -100,14 +95,12 @@
 
         }
         .right-side{
-            // display: grid;
             width: 100%;
-
             main{
                 display: flex;
-                width: 100%;
-                justify-content: space-between;
+                justify-content: space-around;
                 flex-wrap: wrap;
+                width: 100%;
             }
             .bottom{
                 display: flex;
