--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ button:hover a {
   border-radius: 10px;
   color: white;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
-  margin-bottom: 30px;
+  margin: 15px;
 }
 .list-1 .card img {
   border-radius: 10px;
