--- a/scss/globalElement/_card.scss
+++ b/scss/globalElement/_card.scss
@@ -15,7 +15,7 @@
         border-radius: 10px;
         color: white;
         box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
-        margin-bottom: 30px;
+        margin: 15px;
         img{
             border-radius: 10px;
         }
